welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: not found: value x
		setPos(x,y)!=getPos(getMondeHauteur()-1,getMondeHauteur()-1)
                       ^